Add JPMS info and internal access