@@ -62,6 +62,68 @@ JPMS makes three principles, that before were only best practices, explicit
   it with all necessary modules.
   It also allows for reliable configuration of the modules.
 
+Before Java 9 visibility of code could be restricted to classes not being
+visible from different packages and methods and fields of classes not being
+visible to different classes.
+JPMS now allows to restrict the visibility of entire packages to different 
+modules by explicitly declaring the packages that should be accessed by other
+modules.
+This is done with a so called module descriptor as shown in [@lst:module-desc], 
+that is required to be declared in a file called `module-info.java` in the root
+package of the module.
+
+```{#lst:module-desc .java caption="Module descriptor"}
+module com.company.module {
+    exports com.company.module.api;
+    exports com.company.module.cli;
+    exports com.company.module.gui;
+
+    opens com.company.module.api.feature;
+
+    requires org.thirdparty.module;
+    requires transitive org.provider.othermodule;
+
+    uses org.thirdparty.module.Service;
+
+    provides com.company.module.api.Service
+        with com.company.module.api.impl.ServiceImpl;
+}
+```
+
+In this example the module `com.company.module` is declared. It allows access
+from other modules to its packages `com.company.module.api`, 
+`com.company.module.cli` and `com.company.module.gui`. 
+Note however that although Java packages seem to appear hierarchical, they are
+treated like regular identifiers, so if access to subpackages of any of the
+above packages should be allowed, they would have to be explicitly be exported.
+The example module further "opens" the package `com.company.module.api.feature`
+to reflective access from other modules.
+It then declares its dependencies on `org.thirdparty.module` and 
+`org.provider.othermodule`, with the second dependency being declared as
+transitive dependency. This means that the module also depends on all 
+dependencies of `org.provider.othermodule`.
+The last two declarations identify that the module uses a service
+`org.thirdparty.module.Service` provided by some other class and implements a
+service `com.company.module.api.Service` with the class 
+`com.company.module.api.impl.ServiceImpl` for usage by other modules. This
+declaration of services was already a feature of Java before version 9, but
+relied on a fragile configuration using text files.
+
+Since such a module descriptor is a feature of Java 9, it also needs to be
+compiled with a Java 9 compiler or later. 
+However, due to the nature of the Java platform projects can not be run with a 
+previous version of Java than they were compiled with.
+This is unfavorable especially for developers of libraries, as for them 
+upgrading to Java 9 would force all consumers of their library to upgrade to
+Java 9.
+For such a use-case an alternative method to declare a module is implemented in
+JPMS: The attribute `Automatic-Module-Name` can be declared in an Java 
+artifact's manifest to set at least a module name.
+The module is then used as a so called automatic modules, which depends on all
+other available modules and exports all its packages.
+If even such an attribute is not provided, JPMS resorts to interpreting the
+filename of the artifact as a module name.
+
 ## JabRef Bibliography Manager
 
 JabRef is an open source bibliography reference manager using the standard LaTeX
@@ -118,18 +180,51 @@ error: the unnamed module reads package splitpackage.internal from both
 module.one and module.two
 ```
 
-In this initial iteration of the migration, libraries and their features were
-simply removed from JabRef.
+The solution for the first iteration of the migration was to simply remove the
+dependencies with split packages and disable the features of JabRef using them.
 
 ### Internal API Access
 
+Java's JDK consists of the public API but also some internal parts that should
+only be used by the JDK itself [**citation needed**].
+Oracle has warned developers repeatedly that no guarantee is given that the
+internal parts of the JDK stay available in future versions and can change 
+without further announcement.
+
+With Java 9 this announcement is now implemented, as the modules of the JDK now
+simply only export the publicly available API and not the internal APIs.
+While Java 9 still provides the possibility to explicitly make the internal APIs
+available with command line switches like `--add-exports`, the only long-term
+solution is to move away from those APIs and find supported replacement 
+solutions.
+
+JPMS also requires modules to explicitly declare "open" packages that can be 
+used with Java's reflection mechanism. 
+This behavior can also be circumvented with the appropriate `--add-opens` 
+command line flag.
+
+JabRef did only make use of internal APIs at few occurrences, but uses third
+party libraries such as Google's Guava that make extensive use of reflection
+into other modules.
+Some of the used libraries also depended on JDK APIs that are no longer 
+publicly accessible.
+
+For the first iteration the access to internal APIs from third party libraries
+was allowed using the available command line switches.
+The problem of other modules using reflection to access JabRef was solved by
+declaring the newly added `org.jabref` module as an *open module* 
+(see [@sec:module-descriptor]). 
+This allows all reflective access into JabRef from any module.
+
+### Module Names
+
 **To do**
 
-### Module Descriptor
+### Module Descriptor {#sec:module-descriptor}
 
 **To do**
 
-```{#lst:module-desc .java caption="Module descriptor"}
+```{#lst:jabref-module .java caption="JabRef module"}
 open module org.jabref {
     requires com.google.common;
 }
